✨ feat: atualizar navbar e sidebar     Atualiza a navbar e sidebar para melhorar a navegação e a experiência do usuário.
Arquivos Alterados:
    - app/App.vue: adiciona Navbar
    - app/assets/css/main.css: adiciona estilos de arrastar
    - app/components/navbar.vue: atualiza offcanvas
    - app/components/sidebar.vue: atualiza offcanvas
    - app/pages/robot/listagem.vue: ajusta altura
    - app/plugins/bootstrap.client.ts: remove arquivo

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -269,3 +269,11 @@ option {
   justify-content: center;
   z-index: 9998;
 }
+
+.drag-window {
+  app-region: drag;
+}
+
+.no-drag {
+  app-region: no-drag;
+}
