✨ feat: adicionar img-bot     Adiciona a classe .img-bot com estilos para imagem de bot.
Arquivos Alterados:
    - app/assets/css/main.css: adiciona classe .img-bot

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -3,7 +3,6 @@
    ===================== */
 
 @import "modal-app.css";
-
 :root {
   /* Maroon Palette */
 
@@ -276,4 +275,11 @@ option {
 
 .no-drag {
   app-region: no-drag;
+}
+
+.img-bot {
+  border-radius: 0px;
+  height: 100dvh;
+  max-height: 138px;
+  object-fit: contain;
 }
